5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4143/executions/1593_820.log
== TEST (2019-04-01 14:54:25) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
c = (valor // 50)

# Valor restante a ser sacado com notas menores que R$ 50
d = valor % 50

# Quantidade de notas de R$ 10
e = d // 10

# Valor restante a ser sacado com notas menores que R$ 50
f = d % 10

# Quantidade de notas de R$ 2
g = f // 2

print(int(notas_R$50))
print(int(notas_R$10))
print(int(notas_R$2))

-- ERROR:
File "XXXX", line 22
    print(int(notas_R$50))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:55:11) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
c = (valor // 50)

# Valor restante a ser sacado com notas menores que R$ 50
d = valor % 50

# Quantidade de notas de R$ 10
e = d // 10

# Valor restante a ser sacado com notas menores que R$ 50
f = d % 10

# Quantidade de notas de R$ 2
g = f // 2

print(int(c))
print(int(e))
print(int(g))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    c = (valor // 50)
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:55:54) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

a = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
c = (a // 50)

# Valor restante a ser sacado com notas menores que R$ 50
d = valor % 50

# Quantidade de notas de R$ 10
e = d // 10

# Valor restante a ser sacado com notas menores que R$ 50
f = d % 10

# Quantidade de notas de R$ 2
g = f // 2

print(int(c))
print(int(e))
print(int(g))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    c = (a // 50)
TypeError: unsupported operand type(s) for //: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:56:16) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

a = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
c = int(a // 50)

# Valor restante a ser sacado com notas menores que R$ 50
d = valor % 50

# Quantidade de notas de R$ 10
e = d // 10

# Valor restante a ser sacado com notas menores que R$ 50
f = d % 10

# Quantidade de notas de R$ 2
g = f // 2

print(int(c))
print(int(e))
print(int(g))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    c = int(a // 50)
TypeError: unsupported operand type(s) for //: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:56:44) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

a = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
c = int(a//50)

# Valor restante a ser sacado com notas menores que R$ 50
d = valor % 50

# Quantidade de notas de R$ 10
e = d // 10

# Valor restante a ser sacado com notas menores que R$ 50
f = d % 10

# Quantidade de notas de R$ 2
g = f // 2

print(int(c))
print(int(e))
print(int(g))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    c = int(a//50)
TypeError: unsupported operand type(s) for //: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:57:17) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

a = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
c = int(a//50)

# Valor restante a ser sacado com notas menores que R$ 50
d = valor % 50

# Quantidade de notas de R$ 10
e = d // 10

# Valor restante a ser sacado com notas menores que R$ 50
f = d % 10

# Quantidade de notas de R$ 2
g = f // 2

print(int(c))
print(int(e))
print(int(g))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    c = int(a//50)
TypeError: unsupported operand type(s) for //: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:57:30) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

a = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
c = int(a/50)

# Valor restante a ser sacado com notas menores que R$ 50
d = valor % 50

# Quantidade de notas de R$ 10
e = d // 10

# Valor restante a ser sacado com notas menores que R$ 50
f = d % 10

# Quantidade de notas de R$ 2
g = f // 2

print(int(c))
print(int(e))
print(int(g))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    c = int(a/50)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:58:00) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

a = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
c = int(a//50)

# Valor restante a ser sacado com notas menores que R$ 50
d = valor % 50

# Quantidade de notas de R$ 10
e = d // 10

# Valor restante a ser sacado com notas menores que R$ 50
f = d % 10

# Quantidade de notas de R$ 2
g = f // 2

print(int(c))
print(int(e))
print(int(g))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    d = valor % 50
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:58:16) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

a = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
c = int(a//50)

# Valor restante a ser sacado com notas menores que R$ 50
d = a % 50

# Quantidade de notas de R$ 10
e = d // 10

# Valor restante a ser sacado com notas menores que R$ 50
f = d % 10

# Quantidade de notas de R$ 2
g = f // 2

print(int(c))
print(int(e))
print(int(g))

-- OUTPUT:
40
2
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:58:29) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

a = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
c = int(a//50)

# Valor restante a ser sacado com notas menores que R$ 50
d = a % 50

# Quantidade de notas de R$ 10
e = d // 10

# Valor restante a ser sacado com notas menores que R$ 50
f = d % 10

# Quantidade de notas de R$ 2
g = f // 2

print(int(c))
print(int(e))
print(int(g))

-- EXECUTION TIME:
0.201095
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
